# TaskManager

./: .gitignore  .pre-commit-config.yaml  README.md  db_metadata.md  main.py  pyproject.toml
app/: database.py  db_models.py  main.py  schemas.py  test_main.py
app/routes/: task_routes.py  user_routes.py
backend/: app.py  database.py  db_models.py  main.py  test_main.py
backend/routes/: task_routes.py  user_routes.py
backend/src/: database.py  db_models.py  dependencies.py
backend/src/routes/: task_routes.py  user_routes.py
backend/test/: test_main.py
flask_frontend/: app.py
flask_frontend/templates/: index.html  tasks.html
frontend/: app.py  config.py  request_helper.py
frontend/templates/: create_task.html  error.html  index.html  tasks.html  users.html
