[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = ["Maxim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.1"
fastapi = {extras = ["standard"], version = "^0.114.2"}
uvicorn = "^0.30.6"
SQLAlchemy = "^2.0.34"
flask = "^3.0.3"
requests = "^2.32.3"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
pytest = "^8.3.3"
cryptography = "^43.0.3"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
